Tue Mar  2 10:04:54 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Fix assertion failure on 'man -l' with an uncompressed page and
	prefixed input (no-hyphenation, no-justification, or a non-English
	page).

	* lib/pipeline.c (command_new_passthrough): New function.
	* lib/pipeline.h (command_new_passthrough): Add prototype.
	* src/man.c (display): Allow zero-command decompression pipelines
	  with prefix sequences.  In that case, append a passthrough command
	  to the prefix sequence, and append the prefix sequence to the
	  decompression pipeline rather than replacing its first command.
	* NEWS: Document this.

Tue Mar  2 09:31:36 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/nl.po: New from Translation Project (thanks, Erwin
	  Poeze).
	* configure.ac (AC_CONFIG_FILES): Add man/nl/Makefile.
	* man/LINGUAS.po4a: Add nl.
	* man/Makefile.am (DIST_SUBDIRS): Add nl.
	* man/nl/Makefile.am, man/nl/translator.add: New files.
	* man/po4a/Makefile.am (POFILES): Add po/nl.po.
	* man/po4a/po4a.cfg (po4a_langs): Add nl.
	* man/THANKS: Credit Erwin Poeze with man/nl as well as nl.po.
	* .bzrignore: Add man/nl/man1, man/nl/man5, and man/nl/man8.

Thu Feb 18 01:38:04 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/man.c (locale_macros): Explicitly set groff's hyphenation
	  language, to ensure that it only hyphenates languages it knows
	  about (Debian bug #570247).

Tue Feb 16 23:11:58 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.7.
	* po/man-db.pot, po/*.po: Update.

Tue Feb 16 23:09:11 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (get_catpath): Fix handling of non-translated cat
	  paths.

Sun Feb 14 00:19:47 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Always save cat pages in UTF-8 (Debian bug #446741).

	* src/encodings.c (struct directory_entry): Remove
	  standard_output_encoding member.
	  (directory_table): Likewise.
	  (get_standard_output_encoding): Remove.