@@ -220,6 +220,7 @@
 #  define UNCOMPRESS "@uncompress@"
 #  define BUNZIP2 "@bunzip2@"
 #  define UNLZMA "@unlzma@"
+#  define UNXZ "@unxz@"
 #endif /* COMP_SRC */
 
 /*-----------------------------------------------------------------------*/
