@@ -10,6 +10,11 @@ Major changes since man-db 2.5.7:
 	  any of --no-hyphenation, --no-justification, or a non-English
 	  page.
 
+	Improvements:
+	-------------
+
+	o Add support for XZ-compressed manual pages, thanks to Darren Salt.
+
 man-db 2.5.7 (16 February 2010)
 ===============================
 
